adding Kafka message broker