@@ -5,26 +5,31 @@ import com.wonderboy.orderservice.configurations.WebClientConfig;
 import com.wonderboy.orderservice.dtos.InventoryResponse;
 import com.wonderboy.orderservice.dtos.OrderLineItemsDto;
 import com.wonderboy.orderservice.dtos.OrderRequest;
+import com.wonderboy.orderservice.events.OrderPlacedEvent;
 import com.wonderboy.orderservice.models.Order;
 import com.wonderboy.orderservice.models.OrderLineItems;
 import com.wonderboy.orderservice.repositories.OrderRepository;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 import reactor.core.publisher.Flux;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-@Service  @Slf4j
+@Service  @Slf4j @AllArgsConstructor
 public class OrderServices {
 
-    @Autowired
     private OrderRepository orderRepository;
-    @Autowired
     private WebClientConfig webClientConfig;
+
+
+    private  final KafkaTemplate<String,OrderPlacedEvent> kafkaTemplate  ;
 
 
     public void placeOrder(OrderRequest orderRequest) {
@@ -40,15 +45,15 @@ public class OrderServices {
         order.setOrderLineItemsList(orderLineItems);
         List<String> skuCodes = order.getOrderLineItemsList()
                 .stream()
-                .map(item -> item.getSkuCode()).toList();
+                .map(item -> item.getSkuCode()).collect(Collectors.toList());
 
         // call the inventory Service , and place order if items exists
-
-        InventoryResponse[] result  = webClientConfig.webClient().get()
-                .uri("http://localhost:8082/api/inventory",uriBuilder -> uriBuilder.queryParam("sku-code",skuCodes).build())
+         InventoryResponse[] result  = webClientConfig.webClient().build().get()
+                .uri("http://inventory-service/api/inventory", uriBuilder -> uriBuilder.queryParam("sku-code", skuCodes).build())
                 .retrieve()
                 .bodyToMono(InventoryResponse[].class)
                 .block();
+
 
         log.info("------!!----------!  {}",result.length);
 
@@ -56,6 +61,7 @@ public class OrderServices {
 
         log.info("----------------------- {}  ",isInStock);
         if(isInStock){
+            kafkaTemplate.send("notificationTopic",new OrderPlacedEvent(order.getOrderNumber())) ;
             orderRepository.save(order);
         }else {
             throw new IllegalStateException("Product is not in stock, Please try again later ");
